// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features should render Features with correct plural nouns 1`] = `
<ul
  className="property__features"
>
  <li
    className="property__feature property__feature--entire"
  >
    hotel
  </li>
  <li
    className="property__feature property__feature--bedrooms"
  >
    2 Bedrooms
  </li>
  <li
    className="property__feature property__feature--adults"
  >
    Max 
    3 adults
  </li>
</ul>
`;

exports[`Features should render Features with correct singular nouns 1`] = `
<ul
  className="property__features"
>
  <li
    className="property__feature property__feature--entire"
  >
    hotel
  </li>
  <li
    className="property__feature property__feature--bedrooms"
  >
    1 Bedroom
  </li>
  <li
    className="property__feature property__feature--adults"
  >
    Max 
    1 adult
  </li>
</ul>
`;
